--- a/deploy/index.html
+++ b/deploy/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>JS Paint</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <script type="text/javascript" src="app/bower_components/requirejs/require.js" data-main="app/main.js"></script>
+  <script type="text/javascript" src="app/optimized.js"></script>
   <script type="text/javascript">
     window.addEventListener('jspaint:ready', function () {
       var jspaint = new JSPaint();
@@ -11,11 +10,12 @@
     });
   </script>
   <style type="text/css">
+    body, html { overflow: hidden; }
     body { background: #ccc; padding: 0; margin: 0; }
     canvas { background: white; }
   </style>
 </head>
 <body>
-  <canvas id="jspaint"></canvas>
+  <canvas id="jspaint" width="1200" height="800" style="width: 600px; height: 400px;"></canvas>
 </body>
 </html>
